--- a/package.json
+++ b/package.json
@@ -6,10 +6,9 @@
   "author": "Ing.Edgar Terán Meléndez",
   "license": "MIT",
   "private": false,
-  "scripts": {
-    "dev": "nodemon.js"
-  },
+  
   "dependencies": {
+    "dotenv": "^16.0.3",
     "eslint": "^8.32.0",
     "express": "^4.18.2"
   },
