--- a/package.json
+++ b/package.json
@@ -6,13 +6,24 @@
   "author": "Ing.Edgar Terán Meléndez",
   "license": "MIT",
   "private": false,
-  
+  "scripts": {
+    "dev": "nodemon app.js"
+  },
   "dependencies": {
     "dotenv": "^16.0.3",
-    "eslint": "^8.32.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^6.9.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
+    "eslint": "^8.32.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-config-standard-with-typescript": "^32.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "nodemon": "^2.0.20",
+    "typescript": "^4.9.4"
   }
 }
